<resources>
    <string name="app_name">Think-IT challenge</string>
    <string name="HomeImg">Home image</string>
    <string name="welcome_homeTxt">Welcome Home</string>
    <string name="smartyTxt">Smarty</string>
    <string name="your_name">Your Name</string>
    <string name="continueBtn">CONTINUE</string>
    <string name="datetxt">Date</string>
    <string name="welcome_usernameTxt">welcome username</string>
    <string name="this_is_the_room_name">this is the room name</string>
    <string name="room_name">room name</string>
    <string name="number_of_devices">number of devices</string>
</resources>